<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/regist_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_title"
        layout="@layout/title_normal" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="20dip"
        android:text="@string/message_code2"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:layout_below="@+id/common_title" />

    <TextView
        android:id="@+id/account_name_tip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="30dip"
        android:text="@string/account_name"
        android:textColor="@color/regist_tip"
        android:textSize="15sp"
        android:layout_below="@+id/tip" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="55dp"
        android:orientation="horizontal"
        android:id="@+id/regist_inputPassword_rl"
        android:layout_below="@+id/tip"
       >

          <Button
             android:id="@+id/get_verify_code"
             android:layout_width="105dp"
             android:layout_height="48dip"
             android:layout_alignParentRight="true"
             android:gravity="center"
             android:text="@string/regist_get_msgCode"
             android:textColor="@color/regist_getCode"
             android:textSize="14sp"
             android:background="@drawable/button_a_03"
           	 /> 
           	 
            <com.wythe.mall.view.MyEditText
                android:id="@+id/input_message_code"
                android:layout_width="195dp"
                android:layout_height="48dip"
                android:layout_alignParentLeft="true"
                android:hint="@string/find_password_inputMessageCode"
                android:imeOptions="actionDone"
                android:maxLength="16"
                android:paddingLeft="@dimen/regist_inputEdite_padding"
                android:textColorHint="@color/regist_msgCode_hint"
                android:background="@drawable/edit_text"
                android:drawableRight="@drawable/delete"
                android:textSize="16sp"
                android:paddingRight="11dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/get_verify_code"
                android:inputType="phone"
                android:digits="1234567890."
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

                      
       
    </RelativeLayout>


    <Button
        android:id="@+id/next_button"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="17dip" 
        android:background="@drawable/button_b"
        android:gravity="center"
        android:text="@string/regist_next"
        android:textColor="@color/regist_btn0"
        android:textSize="16sp"
        android:layout_below="@+id/regist_inputPassword_rl"  />

     <RelativeLayout
            android:id="@+id/quick_register_to_register_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/next_button"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="16dip"
            >

            <TextView
                android:id="@+id/quick_register_to_register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="遇到问题? 您可以"
                android:textSize="14sp"
                android:textColor="@color/regist_tip2"/>"

            <TextView
                android:id="@+id/quick_register_goseeagreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/quick_register_to_register_text"
                android:text="@string/regist_lianxi"
                android:linksClickable="true"
                android:textColor="@color/regist_tip"
                 android:textSize="14sp" />
      </RelativeLayout>
                
</RelativeLayout>