<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regist_bg">

    <!-- 界面Title -->

    <include
        android:id="@+id/common_title"
        layout="@layout/title_normal" />


    <ScrollView
        android:id="@+id/quick_register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/common_title" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/get_register_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_name_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/history_receiver"
                    android:textColor="@color/regist_tip"
                    android:textSize="15sp"/>

                <RelativeLayout
                    android:id="@+id/register_input_username_layout_rl"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dip"
                    android:layout_marginLeft="25dip"
                    android:background="@drawable/edit_text_x" >

                    <com.wythe.mall.view.MyEditText
                        android:id="@+id/find_password_history_receiver_et"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:hint="@string/history_order_receiver"
                        android:textColorHint="@color/regist_msgCode_hint"
                        android:paddingLeft="@dimen/regist_inputEdite_padding"
                        android:drawableRight="@drawable/delete"
                        android:paddingRight="11dp"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/login_password_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/user_password_new_tip"
                    android:textColor="@color/regist_tip"
                    android:textSize="15sp"/>

                <RelativeLayout
                    android:id="@+id/register_input_password_layout_rl"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dip"
                    android:layout_marginLeft="25dip"
                    android:background="@drawable/edit_text_x" >

                    <com.wythe.mall.view.MyEditText
                        android:id="@+id/find_password_new_password_et"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:inputType="textPassword"
                        android:hint="@string/reset_password_tip"
                        android:textColorHint="@color/regist_msgCode_hint"
                        android:paddingLeft="@dimen/regist_inputEdite_padding"
                        android:drawableRight="@drawable/delete"
                        android:paddingRight="11dp"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/login_password_tip_bottom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="17dip"
                    android:layout_marginLeft="25dip"
                    android:layout_marginRight="25dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/regist_setPasswordTip"
                    android:textColor="@color/regist_tip2"
                    />


                <Button
                    android:id="@+id/find_password_complete_button"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dip"
                    android:layout_marginLeft="25dip"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_b"
                    android:text="@string/regist_finish"
                    android:gravity="center"
                    android:textColor="@color/regist_btn0"
                    android:textSize="16sp" >
                </Button>

                <RelativeLayout
                    android:id="@+id/quick_register_to_register_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/find_password_complete_button"
                    android:layout_marginLeft="25dip"
                    android:layout_marginRight="25dip"
                    android:layout_marginTop="16dip"
                    >

                    <TextView
                        android:id="@+id/quick_register_to_register_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="遇到问题? 您可以"
                        android:textSize="14sp"
                        android:textColor="@color/regist_tip2"/>"

                    <TextView
                        android:id="@+id/quick_register_goseeagreement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@id/quick_register_to_register_text"
                        android:text="@string/regist_lianxi"
                        android:linksClickable="true"
                        android:textColor="@color/regist_tip"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>